added the modal component

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-content"></div>
+    <div id="modal-backdrop"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
